[gd_scene load_steps=2 format=3 uid="uid://bvh4tf5rbipfx"]

[ext_resource type="Script" uid="uid://raocbm7w4f2d" path="res://Scripts/title_screen.gd" id="1_klylv"]

[node name="Title Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_klylv")

[node name="Title Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.313726, 0.513726, 0.282353, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 65.0
offset_top = 38.0
offset_right = 1094.0
offset_bottom = 175.0
theme_override_font_sizes/font_size = 80
text = "Project 2D Adventure"

[node name="Start Button" type="Button" parent="."]
layout_mode = 0
offset_left = 336.0
offset_top = 341.0
offset_right = 511.0
offset_bottom = 432.0
theme_override_font_sizes/font_size = 50
text = "Start"

[node name="Settings Button" type="Button" parent="."]
layout_mode = 0
offset_left = 724.0
offset_top = 510.0
offset_right = 965.0
offset_bottom = 611.0
theme_override_font_sizes/font_size = 50
text = "Settings"

[node name="Settings Menu" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Settings Background" type="ColorRect" parent="Settings Menu"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.313726, 0.513726, 0.282353, 1)

[node name="Settings Label" type="Label" parent="Settings Menu"]
layout_mode = 0
offset_left = 65.0
offset_top = 38.0
offset_right = 1094.0
offset_bottom = 175.0
theme_override_font_sizes/font_size = 80
text = "Settings"

[node name="Back Button" type="Button" parent="Settings Menu"]
layout_mode = 0
offset_left = 1044.0
offset_top = 566.0
offset_right = 1212.0
offset_bottom = 667.0
theme_override_font_sizes/font_size = 50
text = "Back"

[connection signal="pressed" from="Start Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Settings Button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Settings Menu/Back Button" to="." method="_on_back_button_pressed"]
